crates/syn2mas/src/mas_writer/snapshots/syn2mas__mas_writer__test__write_user.snap
---
source: crates/syn2mas/src/mas_writer/mod.rs
expression: db_snapshot
---
users:
  - can_request_admin: "false"
    created_at: "1970-01-01 00:00:00+00"
    is_guest: "false"
    locked_at: ~
    primary_user_email_id: ~
    user_id: 00000000-0000-0000-0000-000000000001
    username: alice
