crates/syn2mas/src/mas_writer/snapshots/syn2mas__mas_writer__test__write_user_with_email.snap
---
source: crates/syn2mas/src/mas_writer/mod.rs
expression: db_snapshot
---
user_emails:
  - confirmed_at: "1970-01-01 00:00:00+00"
    created_at: "1970-01-01 00:00:00+00"
    email: alice@example.org
    user_email_id: 00000000-0000-0000-0000-000000000002
    user_id: 00000000-0000-0000-0000-000000000001
users:
  - can_request_admin: "false"
    created_at: "1970-01-01 00:00:00+00"
    locked_at: ~
    primary_user_email_id: ~
    user_id: 00000000-0000-0000-0000-000000000001
    username: alice
